--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,8 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <h1>
-    Dating App
-  </h1>
- <app-value ></app-value> <!--zavolani komponenty-->
-</div>
+<app-nav></app-nav>
+<app-home></app-home> <!--zavolani komponenty-->
+
 
