--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-nav></app-nav>
-<app-home></app-home> <!--zavolani komponenty-->
+<app-nav></app-nav> <!--zavolani komponenty-->
+<router-outlet></router-outlet>
 
 
